<resources>
    <string name="app_name">RaviTask</string>
    <string name="add">Add</string>
</resources>
