<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_user"
        android:orderInCategory="100"
        android:title="@string/add"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always" />
</menu>
